app/components/common/authorListItem/authorListItem.scss
@import "../../../variables";

.itemWrapper {
  padding: 8px 12px 8px 8px;
  height: 37px;
  border-bottom: 1px solid $gray3;
  margin-right: 4px;
  cursor: pointer;

  &:last-of-type {
    border-bottom: 0;
  }

  &:hover {
    background-color: $gray0;
  }
}

.authorName {
  display: inline-block;
  vertical-align: top;
  height: 20px;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.43;
  color: $black0;
  width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.affiliation {
  display: inline-block;
  vertical-align: top;
  margin-left: 16px;
  height: 20px;
  font-size: 14px;
  line-height: 1.33;
  color: $black0;
  width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.hIndexBox {
  display: inline-block;
  vertical-align: top;
  margin-left: 16px;

  span {
    font-weight: bold;
    border-radius: 10px;
    height: 20px;
    font-size: 10px;
    padding: 4px 8px;
  }
}

